--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,10 +1,14 @@
 /* 项目主样式  start*/
-@import "./base";
+@import "basicStyle/base";
 /* 项目主样式  end*/
 
 /* app 主样式 start*/
-@import "./t_app";
+@import "basicStyle/t_app";
 /* app 主样式 end*/
+
+/*  自定义样式 start */
+@import "customerStyle/index";
+/*  自定义样式 end */
 
 /*  start */
 /*  end */
